# python-intermediate-rivercatchment

./: .gitignore  README.md  catchment-analysis.py  catchment_analysis.py  examples.ipynb  mypy_tutorial.py  nba.ipynb  pyproject.toml  requirements.txt
.github/workflows/: main.yml
catchment/: compute_data.py  models.py  views.py
tests/: test_compute_data.py  test_compute_data_csv.py  test_compute_data_json.py  test_models.py
